※結帳頁面 ●傳遞訂單參數到綠界

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1174,12 +1174,12 @@
                     </div>
                     <div class="d-flex">
                         <h4>運費</h4>
-                        <div class="ml-auto font-weight-bold" id="shippingFee"> NT0 </div>
+                            <div class="ml-auto font-weight-bold" id="shippingFee"> NT @ViewBag.firstFee </div>
                     </div>
                     <hr>
                     <div class="d-flex gr-total">
                         <h5>總計</h5>
-                        <div class="ml-auto h5" id="allTotalPrice"> NT0 </div>
+                            <div class="ml-auto h4" style="color:red" id="allTotalPrice"> NT @ViewBag.firstTotalPrice </div>
                     </div>
                         <hr>
                     }
